image path change

--- a/src/content/blog/如何阅读论文.md
+++ b/src/content/blog/如何阅读论文.md
@@ -3,7 +3,7 @@ title: "如何阅读论文"
 description: 吴恩达在 CS230 课程中关于高效阅读论文方法的总结笔记。
 pubDate: "Jul 29 2020"
 layout: "/src/layouts/MarkdownLyaout.astro"
-heroImage: "/src/content/blog/如何阅读论文/Head.jpg"
+heroImage: "/blog/如何阅读论文/Head.jpg"
 tags: ["学习"]
 ---
 
