--- a/src/content/blog/梯度消失和爆炸问题.md
+++ b/src/content/blog/梯度消失和爆炸问题.md
@@ -3,7 +3,7 @@ title: "梯度消失和梯度爆炸问题"
 description: "理论上，深度学习中更深的结构会带来更好的结果，因为网络层可以什么都不做。但实际实践中反而适得其反，而这里的矛盾，就要从梯度消失和爆炸谈起。"
 pubDate: "Apr 8 2021"
 layout: "/src/layouts/MarkdownLyaout.astro"
-heroImage: "/src/content/blog/梯度消失和爆炸问题/head.png"
+heroImage: "/blog/梯度消失和爆炸问题/head.png"
 tags: ["网络训练", "人工智能"]
 ---
 
