--- a/src/content/blog/海.md
+++ b/src/content/blog/海.md
@@ -3,7 +3,7 @@ title: "海"
 description: "面朝大海时，我在想什么。"
 pubDate: "Nov 22 2022"
 layout: "/src/layouts/MarkdownLyaout.astro"
-heroImage: "/src/content/blog/海/sea.jpg"
+heroImage: "/blog/海/sea.jpg"
 tags: ["思考"]
 ---
 
