--- a/src/content/blog/目标检测入门——术语篇.md
+++ b/src/content/blog/目标检测入门——术语篇.md
@@ -3,7 +3,7 @@ title: "目标检测入门——术语篇"
 description: "目标检测领域常用术语总结。"
 pubDate: "Mar 27 2021"
 layout: "/src/layouts/MarkdownLyaout.astro"
-heroImage: "/src/content/blog/目标检测入门——术语篇/Head.jpg"
+heroImage: "/blog/目标检测入门——术语篇/Head.jpg"
 tags: ["计算机视觉", "目标检测", "人工智能"]
 ---
 
