--- a/src/content/blog/稳定匹配.md
+++ b/src/content/blog/稳定匹配.md
@@ -3,7 +3,7 @@ title: "稳定匹配"
 description: 在1962年，经济学家 David Gale 和 Lloyd Shapley 提出：能否设计过程，能够基于目标的喜好自我执行（self-enforcing）地形成一个最佳的匹配效果。
 pubDate: "Sep 7 2020"
 layout: "/src/layouts/MarkdownLyaout.astro"
-heroImage: "/src/content/blog/稳定匹配/head.jpeg"
+heroImage: "/blog/稳定匹配/head.jpeg"
 tags: ["算法", "网络流"]
 ---
 
@@ -67,7 +67,7 @@ tags: ["算法", "网络流"]
 
 ### 4.1 伪代码实现
 
-<img src="/src/content/blog/稳定匹配/GS_algorithm.png" alt="GS算法" style="max-width: 600px" />
+<img src="/blog/稳定匹配/GS_algorithm.png" alt="GS算法" style="max-width: 600px" />
 
 ### 4.2 算法性质
 
