--- a/src/content/blog/生成模型.md
+++ b/src/content/blog/生成模型.md
@@ -3,7 +3,7 @@ title: "生成模型"
 description: 今天，我们来谈一谈生成模型的解释与实现。
 pubDate: "Feb 15 2021"
 layout: "/src/layouts/MarkdownLyaout.astro"
-heroImage: "/src/content/blog/生成模型/roadmap.png"
+heroImage: "/blog/生成模型/roadmap.png"
 tags: ["生成模型", "人工智能"]
 ---
 
@@ -15,7 +15,7 @@ tags: ["生成模型", "人工智能"]
 
 ## 生成模型分类
 
-<img src="\src\content\blog\生成模型\roadmap.png" alt="Generative Model RoadMap" style="max-width: 600px" />
+<img src="\blog\生成模型\roadmap.png" alt="Generative Model RoadMap" style="max-width: 600px" />
 
 ### Pixel
 
@@ -31,13 +31,13 @@ $$
 
 在 PixelRNN 中，我们从左上角开始生成图片像素，使用 RNN（LSTM）来决定和前序像素的依赖关系。像素的生成循序如下所示：
 
-<img src="\src\content\blog\生成模型\seq_generate.png" alt="PixelRNN" style="max-width: 600px" />
+<img src="\blog\生成模型\seq_generate.png" alt="PixelRNN" style="max-width: 600px" />
 
 #### PixelCNN
 
 在 PixelCNN 中，我们同样从左上角像素开始生成，当前像素依赖于前序一块区域内的所有像素，并通过 CNN 进行实现，如图：
 
-<img src="\src\content\blog\生成模型\pixelCNN.png" alt="PixelCNN" style="max-width: 600px" />
+<img src="\blog\生成模型\pixelCNN.png" alt="PixelCNN" style="max-width: 600px" />
 
 以上两者的训练目标都是最大化训练图像的概率。
 
@@ -60,7 +60,7 @@ $$
 
 自编码器（Autoencoder，AE）可以理解为用一种无监督的方法，从无标签训练数据中，学习一个低维的特征表示。假设输入数据为 $x$，自编码器将它编码为一个更低维度的特征向量 $z$。$z$ 中往往包括了 $x$ 中最重要的特征维度。通过解码器，我们可以从 $z$ 恢复出一个输出向量 $\hat{x}$。
 
-<img src="\src\content\blog\生成模型\auto_encoder.png" alt="AutoEncoder" style="max-width: 600px" />
+<img src="\blog\生成模型\auto_encoder.png" alt="AutoEncoder" style="max-width: 600px" />
 
 在训练自编码器的过程中，我们希望解码得到的 $\hat{x}$ 和原来的 $x$ 尽可能相似，因此我们设置损失函数为 L2 损失函数：
 $$
@@ -85,7 +85,7 @@ $$
 
 因为生成器中，编码器和解码器都是有概率性质的，而任何一个概率都有均值和协方差。因此，我们可以根据编码器和解码器的均值和协方差，创造一个 $p\sim \mathcal{N}(\mu, \sum)$ 的高斯分布进行采样。
 
-<img src="\src\content\blog\生成模型\VAE.png" alt="VAE" style="max-width: 600px" />
+<img src="\blog\生成模型\VAE.png" alt="VAE" style="max-width: 600px" />
 
 有了上述编码和解码网络，我们可以计算出数据概率：
 $$
@@ -130,7 +130,7 @@ VAE 的劣势在于
 
 **鉴别网络**：分辨真实的图片和虚假生成的图片
 
-<img src="\src\content\blog\生成模型\GAN.png" alt="GAN" style="max-width: 600px" />
+<img src="\blog\生成模型\GAN.png" alt="GAN" style="max-width: 600px" />
 
 该训练过程的目标函数为：
 $$
@@ -157,13 +157,13 @@ $$
 
 #### 伪代码
 
-<img src="\src\content\blog\生成模型\gan_code.png" alt="GAN code" style="max-width: 600px" />
+<img src="\blog\生成模型\gan_code.png" alt="GAN code" style="max-width: 600px" />
 
 #### 可解释向量操作
 
 事实上，噪音向量 $z$ 的数学操作在一定程度上是可解释的。例如一个人像生成网络可以有如下操作：
 
-<img src="\src\content\blog\生成模型\image-20210215222432940.png" alt="X generate" style="max-width: 600px" />
+<img src="\blog\生成模型\image-20210215222432940.png" alt="X generate" style="max-width: 600px" />
 
 解释一下，如果我们通过噪音向量 A 组生成的都是“微笑女性”的图片，噪音向量 B 组生成的都是“中性女性”的图片，噪音向量 C 组生成的都是“中性男性”的图片，那么我们可以通过 D=A-B+C 获得生成“微笑男性”的噪音向量组 D。这也正是因为噪音向量 $z$ 中不同维度和生成图片特征相对应导致的。
 
