add llm inference acceleration

--- a/src/content/blog/梯度消失和爆炸问题.md
+++ b/src/content/blog/梯度消失和爆炸问题.md
@@ -95,9 +95,9 @@ $$
 $$
 \sigma'(x)=\frac{e^{-x}}{(1+e^{-x})^2}=\sigma(x)(1-\sigma(x))
 $$
-我们绘制 $\sigma'(x)$ 的图像在区间 $[0,1]$ 的情况：
+我们绘制 $\sigma'(x)$ 的图像在区间 $[0,1]$ 的情况（红色虚线）：
 
-<img src="https://img-blog.csdnimg.cn/20190325214340492.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM3NjY3MzY0,size_16,color_FFFFFF,t_70" alt="The derivation of sigmoid function." style="zoom: 40%;" />
+<img src="\blog\梯度消失和爆炸问题\derivation_sigmoid.png" alt="The derivation of sigmoid function." style="zoom: 60%;" />
 
 我们发现 $\sigma'(x)$ 的取值大概在 $[0.2,0.25]$ 之间，也就是说，在反向传播的过程中，梯度值会不断缩小 4 倍到 5 倍，最终使得接近输入层的网络层参数几乎不被更新，无法进行后续训练。将 sigmoid 更换为 ReLU 等可能可以缓解这一问题。
 
